# All-about-GenerativeAI

./: .gitignore  README.md
GenAI/: requirements.txt  test.py
GenAI/Ses-11/: discussion.ipynb
GenAI/Ses-21/: 09_Huggingface.pptx  Building_Conversational_RAG.ipynb  HUgginegface_models.ipynb
GenAI/Ses-22-23/: 10_PK_RAG.pptx  app.py  config.py  embeddings.py  pdf_processor.py  rag_orchestrator.py  requirements.txt  response_generator.py  vector_store.py
GenAI/Ses-24-25/: .env  11_GraphRAG.pptx  12_OtherRAG_Implementations.pptx  app.py  (+8 more)
Rag/Project/: pyproject.toml  requirements.txt
Rag/Project/fastapi/: main.py
Rag/Project/fastapi/router/: file.py  main.py
Rag/Project/fastapi/static/JS/: base.js  bootstrap.js  jquery-slim.js  popper.js
Rag/Project/fastapi/templates/: main.html
Ses-10/: GenerativeAi.ipynb
Ses-11/: OpenAi_geminiSDK.ipynb  discussion.ipynb
Ses-12/: Custom_llm_client.py  Custom_llm_server.py
Ses-13-15/: DeepLearning.ipynb
Ses-17-20/: gemini_API.ipynb
Ses-21/: HUgginegface_models.ipynb
Ses-22-23/: .env  app.py  config.py  embeddings.py  pdf_processor.py  rag_orchestrator.py  requirements.txt  response_generator.py  vector_store.py
Ses-24-25/: config.py  embeddings.py  pdf_processor.py  rag_orchestrator.py  requirements.txt  response_generator.py  vector_store.py
Ses-26/: 15_Langchain_Models.pptx
Ses-27&28/: 16_Langchain_Prompts.pptx  conditional_chain.py  parallel_chain.py  sequential_chain.py  simple_chain.py
Ses-34-36/: .env  19_LangGraph.pptx
Ses-7 Arrays/: array.ipynb
Ses-9/: Oops.ipynb
gemini/: pyvenv.cfg
(+165 files in other folders)
